Fix calendar wrapping issue

--- a/source/styles/checkout/pickup.css
+++ b/source/styles/checkout/pickup.css
@@ -70,6 +70,7 @@
 
   & .calendar-wrapper {
     display: none;
+    flex-wrap: wrap;
   }
 
 }
